--- a/projects.html
+++ b/projects.html
@@ -58,23 +58,41 @@
 			<div class="col-lg-6 col-lg-offset-3 centered">
 				<h3>Projects</h3>
 				<hr>
-				<p>I love tinkering with different concepts and ideas. Sometime I'm successful, sometimes I'm not so successful. Click each for more details. Currently Under Construction</p>
+				<p>I love tinkering with different concepts and ideas. Sometime I'm successful, sometimes less so. Currently Under Construction</p>
 			</div>
 		</div>
 		<div class="row centered">	
 			<div class="col-lg-4">
-
-				<a class="green" href="work/work01.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<a class="green" href="work/project01.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
 				<h2>Cartographer</h2>
-				<h4>Using Graph Relation Networks to map influence in Publications</h4>
-				<p>2021-Current</p>
+				<h4>Using Graph Relation Networks to map influence </h4>
 			</div>
 			<div class="col-lg-4">
-				<a class="green" href="work/work02.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<a class="green" href="work/project02.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
 				<h2>Video Game Development in Unity</h2>
-				<h4>My foray in trying to develop a video game</h4>
-				<p>Aug-Sept 2019</p>
+				<h4>My foray into trying to develop a video game</h4>
 			</div>
+
+			<div class="col-lg-4">
+				<a class="green" href="work/project03.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<h2>Market Research</h2>
+				<h4>Various self-done market research, partially for fun, and partially out of curiosity</h4>
+			</div>
+
+		</div><!-- /row -->
+		<div class="row centered">	
+			<div class="col-lg-4">
+				<a class="green" href="work/project04.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<h2>Here be Dragons</h2>
+				<h4>Playing with Laser Etching</h4>
+			</div>
+
+			<div class="col-lg-4">
+				<a class="green" href="work/project04.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<h2>Google Trends Analytics</h2>
+				<h4>Various adventures into analyzing Google Trends.</h4>
+			</div>
+			
 
 		</div><!-- /row -->
 		
