--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
 			</div>
 			<div class="col-lg-4">
 				<a class="green" href="work/project02.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
-				<h2>Video Game Development in Unity</h2>
+				<h2>Video Game Development</h2>
 				<h4>My foray into trying to develop a video game</h4>
 			</div>
 
@@ -88,7 +88,7 @@
 			</div>
 
 			<div class="col-lg-4">
-				<a class="green" href="work/project04.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<a class="green" href="work/project05.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
 				<h2>Google Trends Analytics</h2>
 				<h4>Various adventures into analyzing Google Trends.</h4>
 			</div>
