--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
 			<div class="col-lg-4">
 				<a class="green" href="work/project03.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
 				<h2>Market Research</h2>
-				<h4>Various self-done market research, partially for fun, and partially out of curiosity</h4>
+				<h4>Various self-done market research</h4>
 			</div>
 
 		</div><!-- /row -->
