--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
 				<h4>Using Graph Relation Networks to map influence </h4>
 			</div>
 			<div class="col-lg-4">
-				<a class="green" href="work/project02.html"><img class="img-responsive folio_icon center" src="assets/anim/WhiteFlowerBloom.gif" alt="assets/img/loader.gif" /></a>
+				<a href="work/project02.html"><img class="" src="assets/anim/WhiteFlowerBloom.gif" alt="assets/img/loader.gif" /></a>
 				<h2>Video Game Dev</h2>
 				<h4>My foray into trying to develop a video game</h4>
 			</div>
