--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
 		</div>
 		<div class="row centered">	
 			<div class="col-lg-4">
-				<a class="green" href="work/project01.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<a class="green" href="work/project01.html"><img class="img-responsive folio_icon center" src="assets/img/projects/Carto_sample.png" alt="assets/img/loader.gif" /></a>
 				<h2>Cartographer</h2>
 				<h4>Using Graph Relation Networks to map influence </h4>
 			</div>
