another img test

--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
 			</div>
 
 			<div class="col-lg-4">
-				<a class="green" href="work/project03.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<a class="green" href="work/project03.html"><img class="img-responsive folio_icon center" src="assets/img/projects/MarketResearch_sample.png" alt="assets/img/loader.gif" /></a>
 				<h2>Market Research</h2>
 				<h4>Various self-done market research</h4>
 			</div>
