--- a/projects/project01.html
+++ b/projects/project01.html
@@ -62,8 +62,8 @@
 				<p>Cartographer is a project that I started after becoming interested in the marketing aspects of a business, particularly in regards to Key Opinion Leaders, Community Leaders, and Influencers.
           A big portion of marketing nowdays is related to identifying and marketing through these individuals as opposed to things like ads. However, when I inquired about a quantitative method of identifying 
         people like this at my work, it became apparent that much of this is still manually done. Rather then any quantitative approach, it more boiled down into a networking excecise then an analytical one. </p>
-        <p>Seeing this as a potential avenue for improvement, or even just an alternative way to do things, this project was borne. Cartographer aimed to be a quantitative tool for marketing and market research analysts to 
-          find Key Opinion Leaders, and map their influence across a certain topic space. 
+        <p>Seeing this as a potential avenue for improvement, or even just an alternative way to do things, this project was borne. The goal of this project was to explore quantitative methods for finding Key Opinion Leaders
+          ,map their influence across a topic space, and granularly explore a certain KOL's sphere of influence. These methods could then be hopefully translated into a tool that marketing and market research analysts could then use. 
         </p>
 			</div>
 		</div>
@@ -72,33 +72,26 @@
 			<div>
         <h2 id=sec1 alt="">Starting Out</h2>
 				<p>
-          True to my title, the largest bulk of my work and responsibilities were in Research and Development.
-          My primary responsibilities were designing, prototyping, testing, and iterating the implant, delivery system components and mechanisms, and retrieval accessories.
-          I collaborated extensively with both senior engineers and outside manufacturing firms to test new concepts and ideas, rapidly iterate to meet our requirements, solve emerging problems, manage the project schedule.
-          Through that collaborative effort, I was able to produce multiple generations of designs, each taking input and feedback from previous generations.
-          Designs and components that I was responsible were successfully used in Animal, First-in-Human, and Investigational Device Exemption(IDE) Clinical Trials. 
-          Certain portions of my work are now in the public domain, see patents listed below:
+          the planning part
+          The first challenge was to figure out what exactly to measure. Influence is a fickle and weird thing to measure. In social media contexts, raw numbers are often used as a substitute, the more followers you have,
+          the more influence you have. However, that ran anti-thetical to what I wanted to build. I wanted granualar analysis, not just reducing people down to a metric. Besides, my initial research into this already revealed 
+          that something like this existed, the h-index. The h-index can be understood as a measure of how many citations an author received relative to how many articles they published. Many companies like thompson reuters also had their own
+          propetary measures. (maybe expande more here)
+
+          And it was here that the first idea struck me. I could implement all the citation relations into a relational database, and then once completed graph algorithms looking at centrality, pathing, etc could then be run to 
+          give insights on the community and the individual in it. 
+          
         </p>
-        <p>
-          <ul>
-            <li><a href="https://patents.google.com/patent/US20180318114A1/"><b>US20180318114A1</b>(Pending)</a> Implantable devices and methods to treat benign prostate hyperplasia (bph) and associated lower urinary tract symptoms (luts)</li>
-            <li><a href="https://patents.google.com/patent/US20210022594A1"><b>US20210022594A1</b>(Pending)</a> Delivery systems and devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</li>
-            <li><a href="https://patents.google.com/patent/US20210161642A1"><b>US20210161642A1</b>(Pending)</a> Devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</li>
-            <li><a href="https://patents.google.com/patent/US20220008093A1"><b>US20220008093A1</b>(Pending)</a> Self-actuating grasping device</li>
-          </ul>
-        </p>
-        <p>
-          In addition to my normal R&D responsibilities, I was also responsible for mentoring and coaching summer interns. 
-          This included planning out what activities and projects they would be assigned, providing guidance and answering questions as they encountered difficulties, and also familiarizing them with the details and complexities of designing a medical device.
-        </p>
+
       </div>
     </div><!-- /row -->
     <hr>
 
     <div class="row mt">	
 			<div>
-        <h2 id=sec2 alt="">Manufacturing</h2>
+        <h2 id=sec2 alt="">Pulling Data</h2>
 				<p>
+          pulling data and struggles
           Lot of hats were worn at Prodeon, one of which was manufacturing. 
           My responsibilities here mainly focused on authoring the process instructions needed to manufacture our device, working on the assembly line itself, and training new operators. 
           During my time at Prodeon, we successfully completed over half a dozen builds, supporting Design Verification, Validation activities, and clinical trials.
@@ -117,8 +110,9 @@
 
     <div class="row mt">	
 			<div>
-        <h2 id=sec3 alt="">Documentation and Quality</h2>
+        <h2 id=sec3 alt="">Creating the Graph</h2>
 				<p>
+          using neo4j to create an relation database
           Medical Device development would not be complete without documentation. My work here could be divided into two main categories, R&D Design Control related work and product testing related work. 
         </p>
         <p>
@@ -143,8 +137,9 @@
     <hr>
     <div class="row mt">	
 			<div>
-        <h2 id=sec4 alt="">Pre-Clinical and Clinical Trials</h2>
+        <h2 id=sec4 alt="">Analytics</h2>
 				<p>
+          using the db, ie running Pagerank, etc. 
           Probably the most interesting part of my work was related to supporting Pre-Clinical and Clinical Trials, and not just because I got to travel.
           Any medical device development is always accompanied by testing both in-vivo and in-vitro.
           At Prodeon Medical, I had the opportunity to be directly involved in cadaver, animal, and First-in-Human clinical trials.
@@ -173,7 +168,7 @@
     <hr>
     <div class="row mt">	
 			<div>
-        <h2 id=sec5 alt="">Marketing and Physician Feedback</h2>
+        <h2 id=sec5 alt="">remove</h2>
 
         <P> Getting feedback from end-users of the product you develop is important, and at Prodeon, I regularly interfaced with Physicians to get their feedback on design decisions. Through local physicians,
           we were able to drive a rapid prototype schedule. We would frequently develop using a shotgun approach of 3-4 different concpets or variations, and then bring them to evaluate. Through this rapid pace, 
