More Project stuff

--- a/projects/project02.html
+++ b/projects/project02.html
@@ -103,7 +103,7 @@
           The next game idea I had game to me after seeing the motif of flowers, particularly, the imagery of a field of white flowers. 
           Something about that image was intensely striking to me and stuck with me. 
           
-          This idea then mutated into flowers in general, and how their bloom is often associated with life and reneweal.
+          This idea then mutated into flowers in general, and how their bloom is often associated with life and renewal.
           I decided I wanted to turn that on its head, and instead make a game around the flower bloom bringing death. 
 
           From a game mechanics standpoint, I was in the mood to create something with more puzzle elements in it.
