--- a/projects/project01.html
+++ b/projects/project01.html
@@ -120,7 +120,7 @@
           using neo4j to create an relation database, including the insertion scripts, 
           For creating the graph relation database, I went with using neo4j. 
           Neo4j was my first introduction to graph relation databases, and rather than try and re-learn an entirely different system, I decided to go with what I was familiar with.
-          Setup of the database wasquite simple, with nodes created for authors, publications, and journals. I also made the decision to  
+          Setup of the database wasquite simple, with nodes created for authors, publications, and journals. I also made the decision to use separate nodes for associated keywords and the publication type, rather then just 
           
         </p>
         <p>figureing out faster ways of doing things (indexing, load csv, etc. )
