--- a/projects/project02.html
+++ b/projects/project02.html
@@ -86,10 +86,32 @@
 				<p>
           My main goal for the first game was to explore the idea of procedural generation. I played alot of looter type games, such as Diablo, Path of Exile, and Borderlands, and I became fascinated with the variety that procedural generation could provide to the player. 
           I wanted to play with that myself, and hence the idea for my first game was born. The intent was to create basic top-down shooter, ala something like Geometry wars, but to incporate procedural generation into the enemy variety. 
-          I was hoping to have something like a trait system, which certain enemies would spawn with, and which would then change their behaviors. 
+          I was hoping to have something like a trait system, which certain enemies would spawn with, and which would then change their behaviors.
+          In the end, I settled on what I called the Chimera system.
+          Procedurally generated enemies would have a core base, and would have "hardpoints" they could spawn with. 
+          These hardpoints were based off of normal enemies would imbue the entire enemy with different traits, ie more health and speed, shooting behavior, etc.
+          The enemy generation system would randomly choose which traits to put on these chimera enemies, and the end result would be different enemy behavior each time. 
+          The intent was that these Chimeras, created by mashups of different existing enemies, could have emergent behavior that would force the player to respond differently.
+          And with different spawns every time, each playthrough would be a little different, generating the wide variety that I wanted to incorporate. 
+
+
+          The final game worked something like this:
+          Waves of enemies would spawn (with amounts and composition determined by procedural generation), and the the player character would shoot them. 
+          Each destroyed enemy would give coins, which could then be used to purchase weapon upgrades, like double shot, piercing shot, etc. 
+          NEED TO DESCRIBE THE ACTUAL GAME 
         </p>
         <p>
-          
+          Looking back, I think the chimera system had a lot of promise, but was limited by the limitations of my skill at the time.
+          I was just starting to learn C#, and basic game design, so I had to stick with relatively basic behaviors and hardpoints. 
+          If I had more time, I would have loved to incorporate many more enemies, and incorporate them into the chimera system. 
+          I would have also wanted to work more on the player side of things, particularly in the weapons.
+          Just like the chimera system, I had to keep it pretty simple since I was just starting out. 
+          Even simple things, like a "piercing bullet", that could keep going through enemies after it hit, took quite a bit of effort to figure out.
+          Ability wise, I only really incorporated a dash mechanic, since that was simple to program. 
+          I would have liked to incorporate more complexity here as well, and maybe incorporate some of the procedural generation here as well. 
+          One idea I had was that rather then having everything available, the abilities and weapon powerups would randomly show up in the shop as well.
+          This would force the player to adapt and play differently every time based on what the shop gave them. 
+          Overall though, I am proud of what I was able to create as my first game. 
         </p>
 
       </div>
