--- a/projects/project02.html
+++ b/projects/project02.html
@@ -84,21 +84,17 @@
 			<div>
         <h2 id=sec1 alt="">Dev Diary, Game 1, Chimera</h2>
 				<p>
-          My main goal for the first game was to explore the idea of procedural generation. I played alot of looter type games, such as Diablo, Path of Exile, and Borderlands, and I became fascinated with the variety that procedural generation could provide to the player. 
-          I wanted to play with that myself, and hence the idea for my first game was born. The intent was to create basic top-down shooter, ala something like Geometry wars, but to incporate procedural generation into the enemy variety. 
-          I was hoping to have something like a trait system, which certain enemies would spawn with, and which would then change their behaviors.
-          In the end, I settled on what I called the Chimera system.
-          Procedurally generated enemies would have a core base, and would have "hardpoints" they could spawn with. 
-          These hardpoints were based off of normal enemies would imbue the entire enemy with different traits, ie more health and speed, shooting behavior, etc.
-          The enemy generation system would randomly choose which traits to put on these chimera enemies, and the end result would be different enemy behavior each time. 
-          The intent was that these Chimeras, created by mashups of different existing enemies, could have emergent behavior that would force the player to respond differently.
-          And with different spawns every time, each playthrough would be a little different, generating the wide variety that I wanted to incorporate. 
+          My main goal for the first game was to explore the idea of procedural generation.
+          I played alot of looter type games, such as Diablo, Path of Exile, and Borderlands, and I became fascinated with the variety that procedural generation could provide to the player. 
+          I wanted to play with that myself, and hence the idea for my first game was born.
 
+          The game I created was a top-down multi-directional shooter, similar in vein to something like Geometry Wars (link) with the player character trying to survive procedurally generated waves of enemies. 
+          Each destroyed enemy would give coins, which could then be used to purchase weapon upgrades, like double shot, piercing shot, etc, and new abilities.
+          Procedural generation would allow each run to feel different, generating lots of replay value without me having to manually program everything. 
+          The enemies featured had different abilities, and there were what I called Chimera enemies that took it step further.
+          These were generated using a hard point system, with a central "core" and randomly selected "parts".
+          Depending on what parts they spawned with, they would have different abilities, such as more speed, spawning child enemies once they died, etc.
 
-          The final game worked something like this:
-          Waves of enemies would spawn (with amounts and composition determined by procedural generation), and the the player character would shoot them. 
-          Each destroyed enemy would give coins, which could then be used to purchase weapon upgrades, like double shot, piercing shot, etc. 
-          NEED TO DESCRIBE THE ACTUAL GAME 
         </p>
         <p>
           Looking back, I think the chimera system had a lot of promise, but was limited by the limitations of my skill at the time.
