--- a/projects/project02.html
+++ b/projects/project02.html
@@ -63,7 +63,9 @@
            I downloaded Unity, and after working my way through one of their tutorials, I will admit I was hooked.
            Something about building something that you could then play seemed to scratch an itch. 
            I had plenty of ideas for games that I wanted to make and game mechanics I wanted to explore, so I thought I would give it a shot, and try building out some of them.
-           But before 
+            It was also a chance for me to do some programming in a different field.
+            During this time, I was coming off of a binge of Machine Learning, and I felt like I wanted to try something different. 
+
         </p>
         <p>
           The one month challenge was something that I saw on youtube (link), and it seemed like a good solution to a common problem I faced whenever I tried working on side project. 
@@ -120,13 +122,10 @@
 				<p>
           The next game idea I had game to me after seeing the motif of flowers, particularly, the imagery of a field of white flowers. 
           Something about that image was intensely striking to me and stuck with me. 
-          
           This idea then mutated into flowers in general, and how their bloom is often associated with life and renewal.
           I decided I wanted to turn that on its head, and instead make a game around the flower bloom bringing death. 
-
           From a game mechanics standpoint, I was in the mood to create something with more puzzle elements in it.
           I am a big fan of brain teasers and puzzles, and I was eager to try my hand from the other side.
-
         </p>
         <p>
           Unlike the first game, where I could get away with using geometric shapes for art, I had to create actual art assets for this one. The player character, the environments, and most importantly, the flowers.
@@ -140,6 +139,9 @@
           During this, there was no coding, no planning of game mechanics, nothing but opening up Inkscape to work on art assets. 
           And that grind is what I think ultimately triggered the wall, and a lot of frustration.
           I felt like I was wasting time, since I had to put in a ton of work just to get started.
+          All this culminated into me deciding to take a break from this.
+          The frustration had baiscally boiled over into burn-out.
+          I didn't get very far with this game, but you can see some of the assets I created below for it.
           
         </p>
 
