--- a/projects/project03.html
+++ b/projects/project03.html
@@ -68,7 +68,10 @@
 			<div>
         <h2 id=sec1 alt="">The initial foray-2019 Uro Market</h2>
 				<p>
-          My first foray into market research came as a bit of an accident. You can read the background here (link back to work).
+          My first foray into market research came as a bit of an accident. You can read the background here (link back to work section).
+          
+        </p>
+        <p>
           
         </p>
 
