--- a/projects/project03.html
+++ b/projects/project03.html
@@ -69,10 +69,18 @@
         <h2 id=sec1 alt="">The initial foray-2019 Uro Market</h2>
 				<p>
           My first foray into market research came as a bit of an accident. You can read the background here (link back to work section).
+          The Marketing department at my workplace was looking into developing market models, and needed better data on things like procedure volume.
+          That work seemed interesting enough, so I thought I would take a stab at it in my own time. 
+          The first thing I thought of was an article written 
           
         </p>
         <p>
-          
+
+        </p>
+
+        <p>
+          You can see the final "product" that I put together here. 
+          <a>link</a>
         </p>
 
       </div>
