--- a/projects/project03.html
+++ b/projects/project03.html
@@ -71,10 +71,26 @@
           My first foray into market research came as a bit of an accident. You can read the background here (link back to work section).
           The Marketing department at my workplace was looking into developing market models, and needed better data on things like procedure volume.
           That work seemed interesting enough, so I thought I would take a stab at it in my own time. 
-          The first thing I thought of was an article written 
+          The first thing I thought of was an article written about how data from medicare cms was used to compare drug prices between US states.
+          I decided to start digging down that route as a start. 
+          This led me to the first data source I used. 
+          Medicare CMS publishes yearly reimbursement data for procedures.
+          While it didn't cover the entire US market, it would allow for a solid starting point. 
+          Some follow up research for reimbursement data showed that private coverers closely guard their data, so any further data on this wouldn't be helpful.
           
+          I also found Open payments. and also decided to use google trneds, and also clinical trials.gov
+
         </p>
         <p>
+          After I found all that data, I did analysis. 
+          There wasn't a main goal here, since I was doing this more for my own interest. 
+          I just kind of went with the flow with what I found in the data.
+          My analysis ended up focusing on a few main areas:
+          <ul>
+            <li>Use drug and procedure data to find market composition, and more granular analysis such as where procedures are performed</li>
+            <li>Find competitor Very Important Persons (VIP) based on procedure volume and payment data.</li>
+            <li>Use publicly available information to calculate and compare competitor market performance and growth.</li>
+          </ul>
 
         </p>
 
