--- a/projects/project03.html
+++ b/projects/project03.html
@@ -70,7 +70,8 @@
     <hr>
     <div class="row mt">	
 			<div>
-        <h2 id=sec1 alt="">The initial foray-2019 Benign Prostatic Hyperplasia(BPH) Market</h2>
+        <h2 id=sec1 alt="">The initial foray - 2019 </h2>
+        <h3>Benign Prostatic Hyperplasia(BPH) Market</h3>
 				<p>
           My first foray into market research came as a bit of an accident. You can read the background here (link back to work section).
           The Marketing department at my workplace was looking into developing market models, and needed better data on things like procedure volume.
@@ -91,30 +92,30 @@
               Due to US Transparency laws, physicians are required to report on payments they receive from companies, and this datails publicly available.
               I figured I could comb through this to find physicians that were very important to companies, ie they were reimbursed heavily, had lots of travel expenses, royalty payments, etc.</li>
             <li>The next source was <a href="https://clinicaltrials.gov/">Clinical Trials.gov</a>, a US goverment database of clinical trials, that per regulations, companies must list on. This would give me insight into a companies clinical activities</li>
-            <li>Finally, I also realized I could use <a>google search trends</a> as well. This would serve as a proxy for patient interest in the company.</li>
+            <li>Finally, I also realized I could use <a href="https://trends.google.com/trends/?geo=US">Google search trends</a> as well. This would serve as a proxy for patient interest in the company.</li>
           </ul>
         </p>
 
         <p>
           After finding these multiple sources of data, it was time to do my analysis.
-          My analysis ended up focusing on a few main areas:
+          I also decided to use this as an opportunity to experiment with some data visualization/analysis tools. 
+          Software wise, I downloaded and use a free trial version of <a href="https://www.tableau.com/">Tableau</a>, to help create some of the charts.
+          I also took the opportunity to try and use my recently learned python skills.
+          I found a python library, <a href="https://plotly.com/">plotly</a>, that could be used to create interactive data graphs.
+          I used plotly for a few of the graphs, particularly the market composition charts. 
+
+          My final analysis ended up focusing on a few main areas:
           <ul>
             <li>Use drug and procedure data to create a rough market composition, and more granular analysis such as where procedures are performed</li>
             <li>Find competitor Very Important Persons (VIP) based on procedure volume and payment data.</li>
             <li>Use publicly available information to calculate and compare competitor market performance and growth.</li>
           </ul>
 
-          I also took the opportunity to experiment with some data visualization/analysis tools. 
-          Software wise, I downloaded and use a free trial version of <a href="https://www.tableau.com/">Tableau</a>, to help create some of the charts.
-          I also took the opportunity to try and use my recently learned python skills.
-          I found a python library, <a href="https://plotly.com/">plotly</a>, that could be used to create interactive data graphs.
-          I used plotly for a few of the graphs, particularly the market composition charts.   
+          You can see the final "product" in pdf form that I put together here: <br> 
+          <a href="https://drive.google.com/file/d/11_SMqinOPoI5P8vKEDl4WJXgGpOuJOOm/view?usp=sharing">BPH Market Research Report</a>
+
         </p>
 
-        <p>
-          You can see the final "product" in pdf form that I put together here. 
-          <a href="https://drive.google.com/file/d/11_SMqinOPoI5P8vKEDl4WJXgGpOuJOOm/view?usp=sharing">BPH Market Research Report</a>
-        </p>
         <p>
           Looking back, there were quite a few opportunities that I didn't have the time or know how to do, particularly in the visualization tools.
           For both tableau and plotly, I only really scratched the surface in terms of what they could do.
@@ -145,7 +146,8 @@
 
     <div class="row mt">	
 			<div>
-        <h2 id=sec2 alt="">Endovine- Market Size Research</h2>
+        <h2 id=sec2 alt="">Endovine - 2021</h2>
+        <h3>Gastroenterology Market Size Research</h3>
 				<p>
           Like many ideas, Endovine came to me after watching a youtube video on soft robotics and vine robots. (links)
           I struck upon the idea of potentially using them as a replacement for endoscopes and cystoscopes, taking advantage of their soft nature to reduce the overall risks to the patients.
