--- a/projects/project03.html
+++ b/projects/project03.html
@@ -86,7 +86,7 @@
           Private insurers closely guard their data, but <a href="https://data.cms.gov/provider-summary-by-type-of-service/medicare-physician-other-practitioners/medicare-physician-other-practitioners-by-provider-and-service">Medicare CMS</a> publishes yearly reimbursement data, on a time delay.
           Medicare covers mainly older Americans, age 65+, so this wouldn't be a perfect representation of the entire US market, it would skew towards what the older population needed.
           However, the disease I was primarily focused on, BPH, primarily affects older men, so I felt that this was not as big of a limitation, and this would make a suitable source for my needs.
-          I also three other public sources of data that I could combine to create a more detailed market picture.
+          I also found three other public sources of data that I could combine to create a more detailed market picture.
           <ul>
             <li>The first was <a href="https://www.cms.gov/openpayments">Open Payments</a>.
               Due to US Transparency laws, physicians are required to report on payments they receive from companies, and this datails publicly available.
@@ -125,7 +125,7 @@
           You could also look and see if there were "anomalous" payments, such as as travel to an out-of-the way city.
           These were all ideas that I wanted to explore, and I think a better visualization could have helped bring that idea to life better.
         
-          On the data side of things, one of the biggest issues was correlating physicians between Open Payments and the Medicare Reimbursement. 
+          On the data side of things, one of the biggest issues that I would have liked to improve on was correlating physicians between Open Payments and the Medicare Reimbursement. 
           There was not a common id between them, with Medicare using National Provider Identification (NPI) numbers, and Open Payments using their own IDs. 
           I resorted to just matching by first name/last name matching, but this could have resulted in some missed payments/procedures, especially if things like middle initials were present.
           Some digging revealed that ProPublica had a CrossWalk available, but cost way too much for just an independent project.
@@ -149,18 +149,41 @@
         <h2 id=sec2 alt="">Endovine - 2021</h2>
         <h3>Gastroenterology Market Size Research</h3>
 				<p>
-          Like many ideas, Endovine came to me after watching a youtube video on soft robotics and vine robots. (links)
-          I struck upon the idea of potentially using them as a replacement for endoscopes and cystoscopes, taking advantage of their soft nature to reduce the overall risks to the patients.
-          After talking with some of my mentors, they advised me that before embarking on any techncial development, I should go about looking for dealbreakers. 
-          One of the main ones I looked into was researching Market Size, an important part of any pitch.
-          I approached this from the perspective of a potential pitch.
-          After all, it would be quite difficult to convince backers to fund a project like this if there was no real need besides my engineering curiosity.
-          And so with that in mind, I set about my second real Market research project, looking into and estimating the market size for a potential gastro-intestinal product.
+          Like many ideas, Endovine came to me after watching a youtube video on <a href="https://www.youtube.com/watch?v=qevIIQHrJZg&t=205s">soft robotics and vine robots</a>.
+          I struck upon the idea of potentially using them as a replacement for endoscopes and cystoscopes (hence the EndoVine name), taking advantage of their soft nature to reduce the overall risks to the patients.
+          After talking with some of my mentors, they advised me that before embarking on any techncial development, I should go about looking for dealbreakers.
+          One of the main focuses of thie effort was in the potential Market Size. 
+          This would be an important part of any potential pitch I would do for investors, so it was vital that I dig in and create an accurate picture.
+          If this was an officially backed effort, I could have just purchased a market report from a reputable market research firm, and interviewed some doctors.
+          But this was an independent project, so I had to do the research myself. 
+          And so like that, I embarked on my second Market Research project, looking into and estimating the market size for a potential gastro-intestinal product.
 
+        </p>
+        <p>
+          Unlike the work I did for the BPH research, the main focus and challenge of this effort was less about analysis and more about hunting down data in order to put together a complete picture.
+          I had to dig through a variety of sources, including patient support websites, FDA device databases, published research papers, investor notes, and industry news websites. 
+          In one case, I even had to backcalculate the potential market by using demographic statistics.
+          I also figured that I could rely on proxy measures.
+          For example, I figured that by cataloguing company acquisition and investment in the space, that would show the overall market interest in the space.
+          After all, if companies were putting money in, then there had to be a potential market there. 
         </p>
         <p>
           You can see the final presentation I put together here.
           <a href="https://drive.google.com/file/d/1eOYNLYFnLBj7gOQrJ2DtIjzll-eQa6FS/view?usp=sharing">Endovine GI Market Size Report</a>
+        </p>
+        <p>
+          I am quite proud of the data sleuthing I had to do for this report, but there were still areas of improvement that I thought could be done.
+          After reviewing all the different sources, one that I didn't tap into alot was looking at conferences, particularly relevant GI ones. 
+          For example, I never looked into professional societies like the <a href="https://gi.org/">American College of Gastroenterology</a>.
+          Looking at what they were publishing would have given me a good idea of both professional interest and opinions in the space, and would be a valuable addition to the report.
+          After all, if I had developed this into a medical device, they would have been the end-users.
+          It would have also helped with what I believed to be the second improvement I could have made.
+          The second improvement I felt could have been made was on the non-data side of things.
+          I believe that one or two interviews with physicians would have helped greatly to flesh out the the report and validate some the findings.
+          One of the issues with approaching things from a data only standpoint is that there are a lot of subtle factors and nuance that often get lost when a situation is simplified down to numbers. 
+          Interviews with actual physicians in the field would have been greatly helpful in this regard. 
+          I didn't put much effort into this front when doing this report. 
+          If I was to expand on this further, I would have liked to see if I could have set some up, whether using the NPI database to cold call/email or by leveraging some of my network. 
         </p>
 
         
