--- a/projects/project03.html
+++ b/projects/project03.html
@@ -168,7 +168,7 @@
           After all, if companies were putting money in, then there had to be a potential market there. 
         </p>
         <p>
-          You can see the final presentation I put together here.
+          You can see the final presentation I put together here. <br>
           <a href="https://drive.google.com/file/d/1eOYNLYFnLBj7gOQrJ2DtIjzll-eQa6FS/view?usp=sharing">Endovine GI Market Size Report</a>
         </p>
         <p>
