--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
 				<h4>Using Graph Relation Networks to map influence </h4>
 			</div>
 			<div class="col-lg-6">
-				<a href="projects/project02.html"><div><img class="img-responsive folio_icon center" src="assets/anim/WhiteFlowerBloom.gif" alt="assets/img/loader.gif" /></div></a>
+				<a href="projects/project02.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/GameDev_Sample.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Video Game Dev</h2>
 				<h4>My foray into trying to develop a video game</h4>
 			</div>
