--- a/projects/project02.html
+++ b/projects/project02.html
@@ -89,15 +89,20 @@
           My main goal for the first game was to explore the idea of procedural generation.
           I played alot of looter type games, such as Diablo, Path of Exile, and Borderlands, and I became fascinated with the variety that procedural generation could provide to the player. 
           I wanted to play with that myself, and hence the idea for my first game was born.
-
+        </p>
+        <p>
           The game I created was a top-down multi-directional shooter, similar in vein to something like Geometry Wars (link) with the player character trying to survive procedurally generated waves of enemies. 
           Each destroyed enemy would give coins, which could then be used to purchase weapon upgrades, like double shot, piercing shot, etc, and new abilities.
           Procedural generation would allow each run to feel different, generating lots of replay value without me having to manually program everything. 
           The enemies featured had different abilities, and there were what I called Chimera enemies that took it step further.
           These were generated using a hard point system, with a central "core" and randomly selected "parts".
           Depending on what parts they spawned with, they would have different abilities, such as more speed, spawning child enemies once they died, etc.
+          You can see one of those "Chimera" enemies in the below pic.
+          <img src="assets/img/projects/Chimera_Sample.PNG">
 
         </p>
+          
+        
         <p>
           Looking back, I think the chimera system had a lot of promise, but was limited by the limitations of my skill at the time.
           I was just starting to learn C#, and basic game design, so I had to stick with relatively basic behaviors and hardpoints. 
