--- a/projects/project02.html
+++ b/projects/project02.html
@@ -98,7 +98,8 @@
           These were generated using a hard point system, with a central "core" and randomly selected "parts".
           Depending on what parts they spawned with, they would have different abilities, such as more speed, spawning child enemies once they died, etc.
           You can see one of those "Chimera" enemies in the below pic.
-          <img src="assets/img/projects/Chimera_Sample.PNG">
+          <a><img src="assets/img/projects/Chimera_Sample.PNG"></a>
+          
 
         </p>
           
