--- a/projects/project02.html
+++ b/projects/project02.html
@@ -92,7 +92,7 @@
           I wanted to play with that myself, and hence the idea for my first game was born.
         </p>
         <p>
-          The game I created was a top-down multi-directional shooter, similar in vein to something like <a href="https://en.wikipedia.org/wiki/Geometry_Wars">Geometry Wars</a>with the player character trying to survive procedurally generated waves of enemies. 
+          The game I created was a top-down multi-directional shooter, similar in vein to something like <a href="https://en.wikipedia.org/wiki/Geometry_Wars">Geometry Wars</a> with the player character trying to survive procedurally generated waves of enemies. 
           Each destroyed enemy would give coins, which could then be used to purchase weapon upgrades, like double shot, piercing shot, etc, and new abilities.
           Procedural generation would allow each run to feel different, generating lots of replay value without me having to manually program everything. 
           The enemies featured had different abilities, and there were what I called Chimera enemies that took it step further.
@@ -151,8 +151,12 @@
           All this culminated into me deciding to take a break from this.
           The frustration had baiscally boiled over into burn-out.
           I didn't get very far with this game, but you can see some of the assets and initial animation I created below for it.
-          
         </p>
+
+        <div>
+          <img src="/assets/img/projects/GameDev/Damage.png" style="max-width: 60vw;" class="centered">
+          <img src="/assets/img/projects/GameDev/Player_1.png" style="max-width: 60vw;" class="centered">
+        </div>
 
         
       </div>
