--- a/projects/project02.html
+++ b/projects/project02.html
@@ -155,8 +155,6 @@
 
         <div>
           <img src="../assets/anim/WhiteFlowerBloom.gif">
-          <img src="/assets/img/projects/GameDev/Damage.png" style="max-width: 60vw;" class="centered">
-          <img src="/assets/img/projects/GameDev/Player_1.png" style="max-width: 60vw;" class="centered">
           <img src="/assets/img/projects/GameDev/Flowers_Black 64x64.png" style="max-width: 60vw;" class="centered">
           <img src="/assets/img/projects/GameDev/Flowers_Blue 64x64.png" style="max-width: 60vw;" class="centered">
           <img src="/assets/img/projects/GameDev/Flowers_Pink 64x64.png" style="max-width: 60vw;" class="centered">
@@ -164,6 +162,12 @@
           <img src="/assets/img/projects/GameDev/Flowers_Red 64x64.png" style="max-width: 60vw;" class="centered">
           <img src="/assets/img/projects/GameDev/Flowers_White 64x64.png" style="max-width: 60vw;" class="centered">
           <img src="/assets/img/projects/GameDev/Flowers_Yellow 64x64.png" style="max-width: 60vw;" class="centered">
+        </div>
+        <div>
+          <img src="/assets/img/projects/GameDev/Damage.png" style="max-width: 60vw;" class="centered">
+          <img src="/assets/img/projects/GameDev/Player_1.png" style="max-width: 60vw;" class="centered">
+        </div>
+        <div>
           <img src="/assets/img/projects/GameDev/Environment.png" style="max-width: 60vw;" class="centered">
         </div>
 
