--- a/projects/project02.html
+++ b/projects/project02.html
@@ -154,7 +154,7 @@
         </p>
 
         <div>
-          <img src="../assets/anim/WhiteFlowerBloom.gif">
+          
           <img src="/assets/img/projects/GameDev/Flowers_Black 64x64.png" style="max-width: 60vw;" class="centered">
           <img src="/assets/img/projects/GameDev/Flowers_Blue 64x64.png" style="max-width: 60vw;" class="centered">
           <img src="/assets/img/projects/GameDev/Flowers_Pink 64x64.png" style="max-width: 60vw;" class="centered">
@@ -162,6 +162,7 @@
           <img src="/assets/img/projects/GameDev/Flowers_Red 64x64.png" style="max-width: 60vw;" class="centered">
           <img src="/assets/img/projects/GameDev/Flowers_White 64x64.png" style="max-width: 60vw;" class="centered">
           <img src="/assets/img/projects/GameDev/Flowers_Yellow 64x64.png" style="max-width: 60vw;" class="centered">
+          <img src="/assets/anim/WhiteFlowerBloom.gif">
         </div>
         <div>
           <img src="/assets/img/projects/GameDev/Damage.png" style="max-width: 60vw;" class="centered">
