--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
 			</div>
 
 			<div class="col-lg-6">
-				<a href="projects/project04.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<a href="projects/project04.html"><img class="img-responsive folio_icon center" src="assets/img/projects/HereBeDragons_sample.PNG" alt="assets/img/loader.gif" /></a>
 				<h2>Here be Dragons</h2>
 				<h4>Playing with Laser Etching</h4>
 			</div>
