--- a/projects/project02.html
+++ b/projects/project02.html
@@ -150,7 +150,7 @@
           I felt like I was wasting time, since I had to put in a ton of work just to get started.
           All this culminated into me deciding to take a break from this.
           The frustration had baiscally boiled over into burn-out.
-          I didn't get very far with this game, but you can see some of the assets and initial animation I created below for it.
+          I didn't get very far with this game, but you can see some of the assets and initial animation I worked on for it.
         </p>
 
         <div>
